Revert "Changed string names, display"
This reverts commit e6934f0e003ceda7f1fba9bd5f2e56be41d5fbeb.

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -103,6 +103,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="update">হালনাগাদ</string>
     <string name="clear">পরিষ্কার করুন</string>
     <string name="current_date">বর্তমান তারিখ</string>
-    <string name="add_todo">কার্য সংযোজন করুন</string>
+    <string name="add_task">কার্য সংযোজন করুন</string>
     <string name="add_x_witharg">%s সংযোজন করুন</string>
 </resources>
