--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -110,7 +110,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Data de venciment</string>
     <string name="current_date">Data actual</string>
     <string name="archive">Arxivar</string>
-    <string name="add_todo">Afegeix tasca</string>
+    <string name="add_task">Afegeix tasca</string>
     <string name="add_x_witharg">Afegeix %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">El document es carregarà i guardarà com «%s»</string>
     <string name="refresh">Refresca</string>
@@ -153,10 +153,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">Subratlla</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Ja sigui per subratllar els codis de color hexadecimal segons el color</string>
     <string name="underline_hex_color_codes">Subratlla els codis hexadecimals de color</string>
-    <string name="insert_current_date_when_starting_new_todo">Insereix la data actual en iniciar una tasca nova</string>
-    <string name="todos_with_todays_date">Tasques amb data d\'avui</string>
+    <string name="insert_current_date_when_starting_new_task">Insereix la data actual en iniciar una tasca nova</string>
+    <string name="tasks_with_todays_date">Tasques amb data d\'avui</string>
     <string name="append_contexts_and_projects">Annexa contextos i projectes</string>
-    <string name="append_contexts_and_projects_on_end_of_todo">Afegeix contextos i projectes al final d\'una tasca en utilitzar l\'acció de text apropiada</string>
+    <string name="append_contexts_and_projects_on_end_of_task">Afegeix contextos i projectes al final d\'una tasca en utilitzar l\'acció de text apropiada</string>
     <string name="rtl_rendering">Representació RTL</string>
     <string name="highlight_line_ending">Destaca el final de la línia</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Destaca espais al final de línies que contenen dos o més espais</string>
@@ -169,8 +169,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">Recursos</string>
     <string name="space_between_lines_in_percent">Espai entre línies (%)</string>
     <string name="line_spacing">Espai entre línies</string>
-    <string name="archive_does_move_done_todo">Mou les tasques realitzades a un fitxer especificat de la mateixa carpeta</string>
-    <string name="sort_todos_by_selected_order">Ordena les tasques per l\'ordre seleccionat</string>
+    <string name="archive_does_move_done_tasks">Mou les tasques realitzades a un fitxer especificat de la mateixa carpeta</string>
+    <string name="sort_tasks_by_selected_order">Ordena les tasques per l\'ordre seleccionat</string>
     <string name="special_key">Tecla especial</string>
     <string name="key_page_up">Pàgina anterior (Page Up)</string>
     <string name="key_page_down">Pàgina següent (Page Down)</string>
@@ -355,7 +355,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">Color de l\'enllaç</string>
     <string name="add_context">Afegeix context</string>
     <string name="add_project">Afegeix un projecte</string>
-    <string name="archive_completed_todos">Arxivar les tasques completades</string>
+    <string name="archive_completed_tasks">Arxivar les tasques completades</string>
     <string name="sort_alphabetically">Ordena alfabèticament</string>
     <string name="create_new_file_or_folder">Crea un fitxer o carpeta nova</string>
     <string name="choose_format">Trieu el format</string>
@@ -363,7 +363,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Enrere</string>
     <string name="expand_collapse">Expandeix/Replega</string>
     <string name="essential">Essencial</string>
-    <string name="append_human_readable_uuid_to_new_todos">Afegeix UUID llegible per humans a les noves tasques</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Afegeix UUID llegible per humans a les noves tasques</string>
     <string name="action_order">Ordre d\'acció</string>
     <string name="toggle_action_visibility">Canvia la visibilitat de l\'acció</string>
     <string name="load_default_settings">Carrega la configuració per defecte</string>
