--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -109,7 +109,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">마감 예정일</string>
     <string name="current_date">현재 날짜</string>
     <string name="archive">보관</string>
-    <string name="add_todo">할 일 추가</string>
+    <string name="add_task">할 일 추가</string>
     <string name="add_x_witharg">%s 추가</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">문서가 다음으로 열기 및 저장됩니다: \"%s\"</string>
     <string name="refresh">새로고침</string>
@@ -150,10 +150,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">밑줄</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">HEX 색상 코드에 밑줄을 표시할 지 여부</string>
     <string name="underline_hex_color_codes">HEX 색상 코드에 밑줄</string>
-    <string name="insert_current_date_when_starting_new_todo">새로운 할 일을 만들 때 현재 날짜 삽입</string>
-    <string name="todos_with_todays_date">오늘 날짜 기준의 새로운 할 일</string>
+    <string name="insert_current_date_when_starting_new_task">새로운 할 일을 만들 때 현재 날짜 삽입</string>
+    <string name="tasks_with_todays_date">오늘 날짜 기준의 새로운 할 일</string>
     <string name="append_contexts_and_projects">문맥과 프로젝트 첨부</string>
-    <string name="append_contexts_and_projects_on_end_of_todo">적절한 텍스트 동작을 사용할 때, 할 일의 마지막에 문맥과 프로젝트 추가</string>
+    <string name="append_contexts_and_projects_on_end_of_task">적절한 텍스트 동작을 사용할 때, 할 일의 마지막에 문맥과 프로젝트 추가</string>
     <string name="rtl_rendering">오른쪽에서 왼쪽으로 쓰는 언어(right-to-left) 지원</string>
     <string name="highlight_line_ending">줄 마침 강조</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">줄의 맨 마지막에 2개 이상의 빈 칸이 있을 때 이를 강조 표시</string>
@@ -164,8 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">자원</string>
     <string name="space_between_lines_in_percent">줄 간격 백분율(%)</string>
     <string name="line_spacing">줄 간격</string>
-    <string name="archive_does_move_done_todo">완료된 할 일을 같은 폴더의 특정 파일로 이동</string>
-    <string name="sort_todos_by_selected_order">선택한 순서로 할 일 정렬</string>
+    <string name="archive_does_move_done_tasks">완료된 할 일을 같은 폴더의 특정 파일로 이동</string>
+    <string name="sort_tasks_by_selected_order">선택한 순서로 할 일 정렬</string>
     <string name="special_key">특수 키</string>
     <string name="key_page_up">페이지 업 (Page Up)</string>
     <string name="key_page_down">페이지 다운 (Page Down)</string>
@@ -346,7 +346,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">링크 색상</string>
     <string name="add_context">문맥 추가</string>
     <string name="add_project">프로젝트 추가</string>
-    <string name="archive_completed_todos">완료된 할 일 보관처리</string>
+    <string name="archive_completed_tasks">완료된 할 일 보관처리</string>
     <string name="sort_alphabetically">알파벳순으로 정렬</string>
     <string name="create_new_file_or_folder">새 파일 또는 폴더 만들기</string>
     <string name="choose_format">형식 선택</string>
@@ -354,5 +354,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">뒤로가기</string>
     <string name="expand_collapse">확장 / 축소</string>
     <string name="essential">필수</string>
-    <string name="append_human_readable_uuid_to_new_todos">인간이 인식할 수 있는 UUID를 새 할 일에 추가</string>
+    <string name="append_human_readable_uuid_to_new_tasks">인간이 인식할 수 있는 UUID를 새 할 일에 추가</string>
 </resources>
