--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -103,7 +103,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="clear">മായ്ക്കുക</string>
     <string name="current_date">ഇപ്പോഴത്തെ തീയതി</string>
     <string name="archive">ആർക്കൈവ്</string>
-    <string name="add_todo">പുതിയ കർത്തവ്യം</string>
+    <string name="add_task">പുതിയ കർത്തവ്യം</string>
     <string name="add_x_witharg">%s ചേർക്കുക</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">\"%s\" ആയി തുറക്കുകയും സൂക്ഷിക്കുകയും ചെയ്യേണ്ട ഡോക്യുമെന്റ്</string>
     <string name="refresh">പുതുക്കുക</string>
