--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -110,7 +110,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_date">Data scadentă</string>
     <string name="current_date">Data curentă</string>
     <string name="archive">Arhivează</string>
-    <string name="add_todo">Adăugare sarcină</string>
+    <string name="add_task">Adăugare sarcină</string>
     <string name="add_x_witharg">Adaugă %s</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">Document de încărcat şi salvat ca \"%s\"</string>
     <string name="refresh">Împrospătează</string>
@@ -153,10 +153,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="underline">Subliniere</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Dacă se subliniază codurile hexazecimale în funcție de culoare</string>
     <string name="underline_hex_color_codes">Subliniază codurile de culoare Hex</string>
-    <string name="insert_current_date_when_starting_new_todo">Introduceți data curentă când porniți o nouă sarcină</string>
-    <string name="todos_with_todays_date">Sarcini cu data de azi</string>
+    <string name="insert_current_date_when_starting_new_task">Introduceți data curentă când porniți o nouă sarcină</string>
+    <string name="tasks_with_todays_date">Sarcini cu data de azi</string>
     <string name="append_contexts_and_projects">Atașează contexte și proiecte</string>
-    <string name="append_contexts_and_projects_on_end_of_todo">Adăugare contexte și proiecte la sfârșitul unei sarcini atunci când se utilizează textul corespunzător</string>
+    <string name="append_contexts_and_projects_on_end_of_task">Adăugare contexte și proiecte la sfârșitul unei sarcini atunci când se utilizează textul corespunzător</string>
     <string name="rtl_rendering">RTL rendering</string>
     <string name="highlight_line_ending">Evidențiere sfârșitul liniei</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Evidențiază spațiile la capătul liniilor care conțin două sau mai multe spații</string>
@@ -169,8 +169,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="resources">Resurse</string>
     <string name="space_between_lines_in_percent">Spațiu între linii în procente</string>
     <string name="line_spacing">Spațiere linie</string>
-    <string name="archive_does_move_done_todo">Mutați sarcinile finalizate în fișierul specificat în același dosar</string>
-    <string name="sort_todos_by_selected_order">Sortează sarcinile după ordinea selectată</string>
+    <string name="archive_does_move_done_tasks">Mutați sarcinile finalizate în fișierul specificat în același dosar</string>
+    <string name="sort_tasks_by_selected_order">Sortează sarcinile după ordinea selectată</string>
     <string name="special_key">Cheie specială</string>
     <string name="key_page_up">Pagina în sus (Pagina sus)</string>
     <string name="key_page_down">Pagină în jos (Pagina Jos)</string>
@@ -355,7 +355,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">Culoare link</string>
     <string name="add_context">Adaugă context</string>
     <string name="add_project">Adaugă proiect</string>
-    <string name="archive_completed_todos">Arhivare sarcini finalizate</string>
+    <string name="archive_completed_tasks">Arhivare sarcini finalizate</string>
     <string name="sort_alphabetically">Sortează alfabetic</string>
     <string name="create_new_file_or_folder">Creaţi un nou fişier sau dosar</string>
     <string name="choose_format">Alegeți formatul</string>
@@ -363,7 +363,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Înapoi</string>
     <string name="expand_collapse">Extindere / Restrângere</string>
     <string name="essential">Esențial</string>
-    <string name="append_human_readable_uuid_to_new_todos">Adaugă UUID lizibil uman la sarcini noi</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Adaugă UUID lizibil uman la sarcini noi</string>
     <string name="action_order">Ordin de acțiune</string>
     <string name="toggle_action_visibility">Comută vizibilitatea acțiunii</string>
     <string name="load_default_settings">Încarcă setările implicite</string>
